--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,3 +19,14 @@
   height:110px;
   background-color: white;
 }
+
+.navbar-right {
+  position:relative;
+  top:25px;
+}
+
+.navbar-right li {
+  padding:10px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
