--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <img src="https://www.incschools.org/wp-content/themes/incs/assets/img/logo.png" alt="INCS">
         </a>
     <ul class="nav nav-pills navbar-right">
-      <li role="presentation" class="active"><a href="#">Home</a></li>
+      <li role="presentation"><a href="#">Profile</a></li>
       <li role="presentation"><a href="#">Log In</a></li>
       <li role="presentation" class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
