Complete and test associations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,17 +20,21 @@
           <img src="https://www.incschools.org/wp-content/themes/incs/assets/img/logo.png" alt="INCS">
         </a>
     <ul class="nav nav-pills navbar-right">
-      <li role="presentation"><a href="#">Profile</a></li>
-      <li role="presentation"><a href="#">Log In</a></li>
-      <li role="presentation" class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-            Register <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Teacher Registration</a></li>
-            <li><a href="#">School Registration</a></li>
-          </ul>
-        </li>
+      <% if session[:user_id] %>
+        <li role="presentation"><a href="/users/<%=session[:user_id]%>">Profile</a></li>
+        <li role="presentation"><%= link_to "Log out", { controller: :sessions, action: :destroy, id: session[:user_id] }, method: :delete %></li>
+      <% else %>
+        <li role="presentation"><%=link_to "Log In", new_session_path %></li>
+        <li role="presentation" class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+              Register <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="/users/new">Teacher Registration</a></li>
+              <li><a href="/users/new">School Registration</a></li>
+            </ul>
+          </li>
+        <% end %>
     </ul>
     </nav>
   <div class="container" style="padding-top:20px;">
