--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <%= link_to "Upload Resume", new_resume_path, class: "btn btn-primary" %>
 <br />
 <br />
-<table class="table table-condensed table-hover">
+<table class="table table-bordered table-striped table-condensed table-hover table-responsive">
   <thead>
     <tr>
       <th>Name</th>
@@ -20,7 +20,7 @@
     <% @resumes.each do |resume| %>
       <tr>
          <td><%= resume.name %></td>
-         <td><%= link_to "Download Resume", resume.attachment_url %></td>
+         <td><%= link_to "View or Download", resume.attachment_url %></td>
          <td><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %></td>
       </tr>
     <% end %>
