Finish school registration

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,3 +34,16 @@
 .field {
   padding-bottom: 4px;
 }
+
+.resume {
+  border:1px solid black;
+  background-color: white;
+  list-style: none;
+  font-size: 20px;
+}
+
+.list-head {
+  background-color: white;
+  list-style: none;
+  font-size: 20px;
+}
