--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,13 @@
           <img src="https://www.incschools.org/wp-content/themes/incs/assets/img/logo.png" alt="INCS">
         </a>
     <ul class="nav nav-pills navbar-right">
+      <li role="presentation"><a href="/">Home</a></li>
       <% if session[:user_id] %>
-        <li role="presentation"><a href="/users/<%=session[:user_id]%>">Profile</a></li>
+        <% if User.find(session[:user_id]).access == "teacher" %>
+          <li role="presentation"><a href="/users/<%=session[:user_id]%>">Profile</a></li>
+        <% elsif User.find(session[:user_id]).access == "school" %>
+          <li role="presentation"><a href="/users/school/<%=session[:user_id]%>">Search</a></li>
+        <% end %>
         <li role="presentation"><%= link_to "Log out", { controller: :sessions, action: :destroy, id: session[:user_id] }, method: :delete %></li>
       <% else %>
         <li role="presentation"><%=link_to "Log In", new_session_path %></li>
