--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -14,11 +14,11 @@
   <%= f.hidden_field :access, value: "school" %>
   <div class="field">
     <%= f.label :school %>
-    <%= f.text_field :school %>
+    <%= f.text_field :school, size: 60 %><br>
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email %><br>
     <%= f.label :password %>
-    <%= f.password_field :password %>
+    <%= f.password_field :password %><br>
   </div>
 
   <div class="actions">
