--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,16 +4,18 @@
   </div>
 <% end %>
 
+<% if @current_user.access == "teacher" %>
 <br />
 <%= link_to "Upload Resume", new_resume_path, class: "btn btn-primary" %>
 <br />
 <br />
+<% end %>
 <table class="table table-bordered table-striped table-condensed table-hover table-responsive">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Document</th>
       <th>Download Link</th>
-      <th>&nbsp;</th>
+
     </tr>
   </thead>
   <tbody>
@@ -21,8 +23,24 @@
       <tr>
          <td><%= resume.name %></td>
          <td><%= link_to "View or Download", resume.attachment_url %></td>
-         <td><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %></td>
+         <% if @current_user.access == "teacher" %>
+          <td><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %></td>
+         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
+  <h3>User Details</h3>
+<label>Name:</label> <%= @user.prefix%>. <%= @user.first_name%> <%=@user.last_name%><br>
+<label>Email:</label> <%= @user.email%><br>
+<label>Phone:</label> <%= @user.phone_number %><br>
+<label>City of Residence</label> <%= @user.city %><br>
+<label>Licensed in Illinois:</label> <%= @user.il_licensed %><br>
+<label>Highest Degree:</label> <%= @user.degree %><br>
+<label>College Major:</label> <%= @user.major %><br>
+<label>Years of Experience:</label> <%= @user.years %><br>
+<label>Grade Preference:</label> <%= @user.grade_pref %><br>
+<label>Willing to Relocate:</label> <% if @user.relocation %>Yes<%else%>No<%end%><br>
+<label>Registered for Job Fair:</label> <%= @user.register %><br>
+<label>Additional Information:</label> <%= @user.additional %><br>
+
