--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -13,11 +13,11 @@
 
   <%= f.hidden_field :access, value: "school" %>
   <div class="field">
-    <%= f.label :school %>
+    <%= f.label :school %><br>
     <%= f.text_field :school, size: 60 %><br>
-    <%= f.label :email %>
-    <%= f.text_field :email %><br>
-    <%= f.label :password %>
+    <%= f.label :email %><br>
+    <%= f.text_field :email, size: 45 %><br>
+    <%= f.label :password %><br>
     <%= f.password_field :password %><br>
   </div>
 
