Fix additional doc upload function on user show page

--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -8,7 +8,7 @@
   </div>
 <% end %>
 
-<h3>Please upload your resume before continuing with registration. You will have the option to remove your resume from the online resume bank on the next page but a resume is required for registration to the job fair.</h3>
+<h3>Please upload your resume before continuing with registration. A resume is required for registration to the job fair but you will have the option to remove your resume from the online resume bank on the next page.</h3>
 
 <div class="well">
   <%= form_for @resume, html: { multipart: true} do |f| %>
