Add pending registration for schools

--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= f.hidden_field :access, value: "school" %>
+  <%= f.hidden_field :access, value: "pending" %>
   <div class="field">
     <%= f.label :school %><br>
     <%= f.text_field :school, size: 60 %><br>
