--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
           <li role="presentation"><a href="/users/<%=session[:user_id]%>">Profile</a></li>
         <% elsif User.find(session[:user_id]).access == "pending" %>
           <li role="presentation"><a href="/">Registration pending</a></li>
+        <% elsif User.find(session[:user_id]).access == "admin" %>
+          <li role="presentation"><a href="/users/pending">Pending Registrations</a></li>
         <% elsif User.find(session[:user_id]).access == "school" %>
           <li role="presentation"><a href="/users/school/<%=session[:user_id]%>">Search</a></li>
         <% end %>
