--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>IncsResumeBank</title>
+  <link rel="icon" type="image/x-icon" href="https://www.incschools.org/wp-content/themes/incs/assets/img/favicon_16x16.png" />
+  <link rel="apple-touch-icon-precomposed" href="https://www.incschools.org/wp-content/themes/incs/assets/img/favicon_32x32.png">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
