--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -37,47 +37,47 @@
   <br>
 
   <div class="field">
-    <%= f.label :email %>
+    <%= f.label :email, :class => "teacher-label" %>
     <%= f.text_field :email %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, :class => "teacher-label" %>
     <%= f.password_field :password %>
   </div>
 
   <div class="field">
-    <%= f.label :phone_number %>
+    <%= f.label :phone_number, :class => "teacher-label" %>
     <%= f.phone_field :phone_number %>
   </div>
 
   <div class="field">
-    <%= f.label(:name, "Address Line 1") %>
+    <%= f.label(:name, "Address Line 1", :class => "teacher-label") %>
     <%= f.text_field :street %>
   </div>
 
   <div class="field">
-    <%= f.label(:name, "Address Line 2") %>
+    <%= f.label(:name, "Address Line 2", :class => "teacher-label") %>
     <%= f.text_field :street_second %>
   </div>
 
   <div class="field">
-    <%= f.label :city %>
+    <%= f.label :city, :class => "teacher-label" %>
     <%= f.text_field :city %>
   </div>
 
   <div class="field">
-    <%= f.label :state %>
-    <%= f.select :state, options_for_select(us_states),{}, class: 'form-control' %>
-  </div>
-
-  <div class="field">
-    <%= f.label :zip %>
+    <%= f.label :zip, :class => "teacher-label" %>
     <%= f.text_field :zip %>
   </div>
 
   <div class="field">
-    <%= f.label :country %>
+    <%= f.label :state, :class => "teacher-label" %>
+    <%= f.select :state, options_for_select(us_states),{}, class: 'form-control' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :country, :class => "teacher-label" %>
     <%= f.select :country, options_for_select(countries),{}, class: 'form-control' %>
   </div><br><br>
 
@@ -116,11 +116,11 @@
   </div><br>
 
   <div class="field">
-    <%= f.label :major %>
+    <%= f.label :major, :class => "teacher-label2" %>
     <%= f.text_field :major %>
   </div>
   <div class="field">
-    <%= f.label :masters_concentration %>
+    <%= f.label :masters_concentration, :class => "teacher-label2" %>
     <%= f.text_field :masters_concentration %>
   </div><br>
 
@@ -153,15 +153,19 @@
 
   <div class="field">
     <label><em>Preferred Subject(s) *</em></label><br>
-    <input type="checkbox" name="subs[]" value="None" />
-    <label>None</label><br>
-    <% Subject.all.each do |sub| %>
-    <input type="checkbox" name="subs[]" value="<%= sub.subject %>" />
-    <label><%= sub.subject %></label><br>
-    <% end %>
-  </div><br>
+    <ul class="checkbox-grid">
+      <li><input type="checkbox" name="subs[]" value="None" />
+      <label>None</label></li>
+      <% Subject.all.order(:subject).each do |sub| %>
+        <li><input type="checkbox" name="subs[]" value="<%= sub.subject %>" />
+        <label><%= sub.subject %></label></li>
+      <% end %>
+    </ul>
+  </div>
+  <label></label>
 
   <div class="field">
+    <br>
     <%= f.label(:relocation, "Are you open to relocation?") %><br>
     <%= f.radio_button(:previous, true) %>
     <%= f.label(:relocation, "Yes") %><br>
