--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="centered">
-<span class="main-header"><h1>Welcome to the INCS Resume Bank</h1></span>
+<h1 class="main-header">Welcome to the INCS Resume Bank</h1>
 
   <div class="main-container">
     <%= button_to "Teacher Registration", new_resume_path, method: :get, class: "btn btn-info main-btn"%>
