--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>IncsResumeBank</title>
+  <title>Resume Bank | INCS</title>
   <link rel="icon" type="image/x-icon" href="https://www.incschools.org/wp-content/themes/incs/assets/img/favicon_16x16.png" />
   <link rel="apple-touch-icon-precomposed" href="https://www.incschools.org/wp-content/themes/incs/assets/img/favicon_32x32.png">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
