Button styling site wide

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,9 +28,29 @@ body {
     line-height:17px;
 }
 
+.new_resume > input {
+  display:inline-block;
+}
+
+.new_resume > label {
+  margin-left:8%;
+}
+
 .nav-pills > li > a:hover{
     background-color:#15BDCA;
     color:#fff;
+}
+
+.btn {
+  background-color:#07adba;
+  color:#f2f2f2;
+  border-color: transparent;
+}
+
+.btn:hover {
+  background-color:#15BDCA;
+  color:#fff;
+  border-color: transparent;
 }
 
 .container {
@@ -151,6 +171,34 @@ body {
   background-color: white;
   list-style: none;
   font-size: 20px;
+}
+
+.btn-search {
+  width: 200px;
+  position: relative;
+  left: 33%;
+}
+
+.btn-submit {
+  width: 100px;
+  position: relative;
+  left: 33%;
+  border-color: transparent;
+}
+
+.btn-activate {
+  background-color: #65AB45;
+  border-color: transparent;
+}
+
+.btn-deactivate {
+  background-color: #B41782;
+  border-color: transparent;
+}
+
+.btn-danger {
+  background-color: #652D88;
+  border-color: transparent;
 }
 
 .list-head {
