--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -26,5 +26,6 @@
       <% end %>
     </ul><br>
   </div>
-<br><%= submit_tag 'Search', class: "btn btn-info" %>
+  <label></label>
+<br><%= submit_tag 'Search', class: "btn btn-info btn-search" %><br><br>
 <% end %>
