Add content for school emails

--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -4,14 +4,32 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Your account for <%= @user.school %> at the INCS Resume Bank has been activated. </h1>
+    <p>Dear, <%= @user.first_name %> <%= @user.last_name%></p>
     <p>
-      Your username is your email address: <%= @user.email %>.<br>
+      Your registration has been approved, and you can now access INCS’s Online Resume Collection Box here. (include final link).<br>
     </p>
 
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      Search for candidates by entering keywords such as “college counselor,” “history,” or “secondary education” to find all the candidates that match your selection. Once you run a search, you can browse through candidate summaries, download the resumes that you select, and even run a report of all prospective applicants who meet your requirements.<br>
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>
+      With this tool, you may also see who is registered for the 2016 Teacher Job Fair on Saturday, March 5th, 2016, at USCN’s Veterans Memorial Campus at 4248 W. 47th St, from 9:00-12:00pm. If you have not registered for the fair yet, do so here (https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809)!<br>
+    </p>
+    <p>
+      If you need any assistance using our database, please do not hesitate to contact me at the information below. <br>
+    </p>
+
+    <p>
+      Best,<br><br>
+      Stephanie Arias<br>
+      Charter Support Manager<br>
+      Illinois Network of Charter Schools<br>
+      150 N. Michigan Ave<br>
+      Suite 430<br>
+      Chicago, IL 60601<br>
+      P 312.690.2715<br>
+      F 312.629.2064<br>
+      sarias@incschools.org<br>
+    </p>
   </body>
 </html>
