--- a/app/views/user_mailer/school_email.html.erb
+++ b/app/views/user_mailer/school_email.html.erb
@@ -4,17 +4,27 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to the INCS Resume Bank, <%= @user.school %></h1>
+    <p>Dear, <%= @user.first_name %> <%= @user.last_name%></p>
     <p>
-      You have successfully signed up,
-      your username is your email address: <%= @user.email %>.<br>
+      Thank you for your interest in the INCS Resume Collection Box! Your registration has been received.  Please allow up to 2 business days for INCS staff to review and process approval of your account.<br>
     </p>
     <p>
-      Your registration must be approved by INCS before you are able to search the resume bank. Please allow 1-3 days for processing.
+      Once approved, you will receive a confirmation email and will be able to search for candidates, learn who is registered for our 2016 Teacher Job Fair, and access candidates’ contact information to set up interviews according to your unique recruitment process and timeline.
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      In the meantime, you may learn more about the 2016 Teacher Job Fair and register here (insert link to https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809 ). We look forward to seeing you on March 5, 2016 at USCN's Veterans Memorial Campus, from 9:00am-12pm for this event. Register today!<br>
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>Sincerely,<br><br>
+
+      Stephanie Arias<br>
+      Charter Support Manager<br>
+      Illinois Network of Charter Schools<br>
+      150 N. Michigan Ave<br>
+      Suite 430<br>
+      Chicago, IL 60601<br>
+      P 312.690.2715<br>
+      F 312.629.2064<br>
+      sarias@incschools.org<br>
+    </p>
   </body>
 </html>
