--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Dear, <%= @user.first_name %> <%= @user.last_name%></p>
+    <p>Dear <%= @user.first_name %> <%= @user.last_name%>,</p>
     <p>
       Your registration has been approved, and you can now access INCS’s Online Resume Collection Box here. (include final link).<br>
     </p>
