--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -1,10 +1,20 @@
-Welcome to the INCS Resume Bank, <%= @user.school %>
-===============================================
+Dear <%= @user.first_name %> <%= @user.last_na
 
-Your account for <%= @user.school %> at the INCS Resume Bank has been activated.
+Your registration has been approved, and you can now access INCS’s Online Resume Collection Box here. (include final link).
 
-Your username is your email address: <%= @user.email %>.
+Search for candidates by entering keywords such as “college counselor,” “history,” or “secondary education” to find all the candidates that match your selection. Once you run a search, you can browse through candidate summaries, download the resumes that you select, and even run a report of all prospective applicants who meet your requirements.
 
-To login to the site, just follow this link: <%= @url %>.
+With this tool, you may also see who is registered for the 2016 Teacher Job Fair on Saturday, March 5th, 2016, at USCN’s Veterans Memorial Campus at 4248 W. 47th St, from 9:00-12:00pm. If you have not registered for the fair yet, do so here (https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809)!
 
-Thanks for joining and have a great day!
+If you need any assistance using our database, please do not hesitate to contact me at the information below. 
+
+Best,
+Stephanie Arias
+Charter Support Manager
+Illinois Network of Charter Schools
+150 N. Michigan Ave
+Suite 430
+Chicago, IL 60601
+P 312.690.2715
+F 312.629.2064
+sarias@incschools.org
