--- a/app/views/user_mailer/school_email.text.erb
+++ b/app/views/user_mailer/school_email.text.erb
@@ -1,10 +1,18 @@
-Welcome to the INCS Resume Bank, <%= @user.school %>
-===============================================
+Dear <%= @user.first_name %> <%= @user.last_name%>,
+Thank you for your interest in the INCS Resume Collection Box! Your registration has been received.  Please allow up to 2 business days for INCS staff to review and process approval of your account.
 
-You have successfully signed up, your username is your email address: <%= @user.email %>.
+Once approved, you will receive a confirmation email and will be able to search for candidates, learn who is registered for our 2016 Teacher Job Fair, and access candidates’ contact information to set up interviews according to your unique recruitment process and timeline.
 
-Your registration must be approved by INCS before you are able to search the resume bank. Please allow 1-3 days for processing.
+In the meantime, you may learn more about the 2016 Teacher Job Fair and register here: https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809. We look forward to seeing you on March 5, 2016 at USCN's Veterans Memorial Campus, from 9:00am-12pm for this event. Register today!
 
-To login to the site, just follow this link: <%= @url %>.
+Sincerely,
 
-Thanks for joining and have a great day!
+Stephanie Arias
+Charter Support Manager
+Illinois Network of Charter Schools
+150 N. Michigan Ave
+Suite 430
+Chicago, IL 60601
+P 312.690.2715
+F 312.629.2064
+sarias@incschools.org
